<resources>
    <string name="app_name">Заметка</string>
    <string name="note">Заметка</string>
    <string name="header">Заголовок</string>
    <string name="save">Сохранить</string>
    <string name="saved">Сохранено</string>
    <string name="not_saved">Не сохранено</string>
    <string name="input_text">Введите текст</string>
    <string name="share">Поделиться</string>
    <string name="about">О приложении</string>
    <string name="about_activity_label">О приложении</string>
    <string name="add">Добавить</string>
    <string name="edit_note">Изменить запись</string>
    <string name="question_save_note">Действительно сохранить заметку?</string>
    <string name="question_location_settings">Перейти к настройкам разрешений?</string>
    <string name="message_location_settings_dialog">Для получения координат необходимо соответствующее разрешение</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Отмена</string>

    <!--Content descriptions-->
    <string name="note_titled">Заметка под названием</string>
    <string name="untitled_note">Заметка без названия</string>
    <string name="save_button">Кнопка сохранить</string>
    <string name="add_button">Кнопка добавить</string>
    <string name="about_the_app_button">Кнопка о приложении</string>
    <string name="share_note_button">Кнопка поделиться заметкой</string>
    <string name="get_location_button">Кнопка получить координаты</string>

    <string name="download_note">Загрузить заметку</string>
    <string name="downloaded">Загружено</string>
    <string name="download_failed">Загрузка не удалась</string>
    <string name="search">Поиск</string>
    <string name="search_button">Кнопка поиска</string>
    <string name="get_location">Получить координаты</string>
    <string name="location">Координаты:\n%f, %f</string>
    <string name="open_site">Открыть сайт</string>
    <string name="open_site_button">Кнопка открытия сайта</string>
    <string name="webview_demo" translatable="false">WebView Demo</string>
    <string name="html_text" translatable="false"><![CDATA[<h2>Lorem ipsum</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>]]></string>


    <plurals name="notes_saved">
        <item quantity="one">Cохранена %d заметка</item>
        <item quantity="two">Cохранено %d заметки </item>
        <item quantity="few">Cохранено %d заметки</item>
        <item quantity="many">Cохранено %d заметок</item>
        <item quantity="other">Cохранено %d заметок</item>
    </plurals>

    <string name="html_example" translatable="false"><![CDATA[<html><body>
                <h1>H1 Header</h1>
                <h2>H2 Subhead</h2>
                <h3>H3 Subhead</h3>
                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
                <blockquote>Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.
                <p>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.</p>
                <p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p></blockquote>
                <p><strong>Phasellus ultrices</strong> nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.</p>
                <ul>
                <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
                li>Aliquam tincidunt mauris eu risus.</li>
                <li>Vestibulum auctor dapibus neque.</li>
                <li>Nunc dignissim risus id metus.</li>
                <li>Cras ornare tristique elit.</li>
                </ul>
                <hr />
                <p><em>Phasellus ultrices</em> nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.</p>
                <ol>
                <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
                <li>Aliquam tincidunt mauris eu risus.</li>
                <li>Vestibulum auctor dapibus neque.</li>
                </ol>
                <p>Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.<br />
                Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna.</p>
                <code>Morbi vitae ante. Vivamus ultrices luctus nunc. Suspendisse et dolor. Etiam dignissim. Proin malesuada adipiscing lacus. Donec metus. Curabitur gravida.</code>
                </body></html>]]></string>
</resources>