<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_menu_item"
        android:contentDescription="@string/search_button"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/save_menu_item"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save"
        android:visible="false"
        android:contentDescription="@string/save_button"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_menu_item"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        android:contentDescription="@string/add_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_menu_item"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"
        android:contentDescription="@string/about_the_app_button"
        app:showAsAction="never" />
</menu>