<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_menu_item"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save"
        android:contentDescription="@string/save_button"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share_menu_item"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        android:contentDescription="@string/share_note_button"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about_menu_item"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/about"
        android:contentDescription="@string/about_the_app_button"
        app:showAsAction="never" />
</menu>